--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
 
         <section class="lewis">
 			<h2>Year at Lewis: 1</h2>
-			<h2>Lewis major/minor/concentrations: [Your major/minor/concentrations]</h2>
-			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
+			<h2>Lewis major/minor/concentrations: Computer Science with a specialization in Software Engineering</h2>
+			<h2>Reasons for pursuing this degree: I want to progress my career and switch to the Tech industry</h2>
         </section>
 
 		<section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>[Your reasons for taking this course]</p>
+            <p>This is the first Computer Science course I need to obtain my degree in Computer Science</p>
         </section>
 
 		<section class="job">
             <p>Current/Recent Job</p>
-			<p>[Your job responsibilities]</p>
+			<p>Production Team Leader at Ecolab in Joliet</p>
         </section>		
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
+            <p>I like just about anything outdoors, video games, sand volleyball and going out with friends and family.</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>[A fun fact about yourself]</p>
+            <p>I am 26 years old and this is actually the fourth college I have attended.</p>
         </section>
     </div>
 </body>
