--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .main-info h1 {
             margin: 0;
         }
-        .hobbies, .lewis, .course, .job {
+        .hobbies, .lewis, .course, .job, .fun-fact {
             background: #e7e7e7;
             padding: 15px;
             margin-bottom: 10px;
@@ -61,5 +61,6 @@
             <p>I am 26 years old and this is actually the fourth college I have attended.</p>
         </section>
     </div>
+	<div class=footer> Last updated on 9/13/2024 </div>
 </body>
 </html>
